Removed bytecode enforcement to enable ajdoc (i.e. site / report generation).
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@19944 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/main/resources/aspectj-report_sv.properties
+++ b/src/main/resources/aspectj-report_sv.properties
@@ -21,6 +21,6 @@
 # SOFTWARE.
 #
 report.aspectj.name= AspectJ-rapport
-report.aspectj.description= Rapporten innehÂller HTML-dokumentation av AspectJ-konstruktionerna sÂv‰l som \
-  de Java-konstruktioner som Javadoc renderar. Utˆver det visar den kopplingen mellan dem i form av l‰nkar. \
-  Det betyder t.ex. att du kan se allt som pÂverkar en metod n‰r du l‰ser metodens dokumentation.
+report.aspectj.description= Rapporten inneh√•ller HTML-dokumentation av AspectJ-konstruktionerna s√•v√§l som \
+  de Java-konstruktioner som Javadoc renderar. Ut√∂ver det visar den kopplingen mellan dem i form av l√§nkar. \
+  Det betyder t.ex. att du kan se allt som p√•verkar en metod n√§r du l√§ser metodens dokumentation.
